--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - 22:22
     tty: true
     stdin_open: true
+    networks:
+      ok_net:
+        ipv4_address: 172.23.0.2
   master02:
     container_name: master02
     build: ./master02/build
@@ -14,6 +17,9 @@ services:
       - 22:22
     tty: true
     stdin_open: true
+    networks:
+      ok_net:
+        ipv4_address: 172.23.0.3
   master03:
     container_name: master03
     build: ./master03/build
@@ -21,6 +27,9 @@ services:
       - 22:22
     tty: true
     stdin_open: true
+    networks:
+      ok_net:
+        ipv4_address: 172.23.0.4
   node01:
     container_name: node01
     build: ./node01/build
@@ -28,6 +37,9 @@ services:
       - 22:22
     tty: true
     stdin_open: true
+    networks:
+      ok_net:
+        ipv4_address: 172.23.0.5
   ops:
     container_name: ops
     build: ./ops/build
@@ -35,3 +47,14 @@ services:
       - 22:22
     tty: true
     stdin_open: true
+    networks:
+      ok_net:
+        ipv4_address: 172.23.0.6
+networks:
+  ok_net:
+    name: ok_net
+    driver: bridge
+    ipam:
+     driver: default
+     config:
+       - subnet: 172.23.0.6/24
